# zrapp_demo

./: .envrc  .gitignore  README.md  pyproject.toml  streamlit_demo.py
demos/: dlt_demo.py  duckdb_demo.py  race_data_demo.py  request_demo.py
zrapp/: endpoints.py
